--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.datasource.password=Spr1ng_student
 
 spring.main.banner-mode=off
 logging.level.root=warn
+
+
+# add logging configs to add SQL statements
+## log sql statements
+logging.level.org.hibernate.SQL= debug
+## log values for sql statements
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+#config JPA/Hibernate to auto create the tables in DB
+#spring.jpa.hibernate.ddl-auto=create
+# it will keep our old data
+spring.jpa.hibernate.ddl-auto=update
+
